[workspace]
members = [
  "apps/engine/bin/forge",
  "apps/engine/crates/api",
  "apps/engine/crates/engine-core",
  "apps/engine/crates/executor",
  "apps/engine/crates/schedular",
  "apps/engine/crates/storage",
  "apps/engine/crates/storage-migrations",
  "packages/contracts-rust",
]

resolver = "3"
