[package]
name = "storage-migrations"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = "1.1.19"
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }
engine-core = { path = "../engine-core" }
