[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
# Config
dotenvy = "0.15.7"

# Web
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "request-id",
] }

# Async
tokio = { version = "1.48.0", features = ["full"] }

# Database
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0.17"
anyhow = "1.0"

# Observability
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "json",
] }

# inter-repo deps
engine-core = { path = "../engine-core" }
