[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4.0" # Actix Web for the web server
actix-rt = "2.5.0" # Actix runtime
env_logger = "0.11.8" # For logging
log = "0.4" # Log macros
serde = { version = "1.0", features = [
  "derive",
] } # For serializing/deserializing
serde_json = "1.0" # For JSON support
tracing = "0.1" # for structured logging
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] } # for setting up the subscriber (which defines the output format)
chrono = "0.4" # for handling timestamps
engine-core = { path = "../engine-core" }
